--- a/part_1/package.json
+++ b/part_1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-react-hook-function",
+  "name": "http-requests",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
