--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-react-hook-function",
+  "name": "forms-user-input",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
